--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -11,6 +11,12 @@ scopes = {
 	"last_search.3BE40471" = ""
 	"OpenInspectorPreview.3BE40471" = "0"
 	"currentGroup.3BE40471" = "all"
+	"last_search.310DEAF1" = "reset"
+	"OpenInspectorPreview.310DEAF1" = "0"
+	"currentGroup.310DEAF1" = "all"
+	"last_search.98D18836" = ".cs"
+	"OpenInspectorPreview.98D18836" = "0"
+	"currentGroup.98D18836" = "all"
 }
 providers = {
 	packages = {
